# PandID

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: build-icons.mjs
src/: App.tsx  index.css  main.tsx  splash.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_assoc.rs  lib.rs
src/components/Analysis/: PumpSystemChart.tsx  RoutePreview.tsx
src/components/Canvas/: Canvas.tsx  PipeEdge.tsx  SendBomButton.tsx  SymbolNode.tsx  tapInsertion.ts
src/components/Drawings/: PageInspector.tsx  PageList.tsx  PagePreview.tsx  sendBomPage.ts
src/components/Inspector/: Inspector.tsx  PresetDropdown.tsx
src/components/Palette/: Palette.tsx
src/components/Toolbar/: RecentMenu.tsx  Toolbar.tsx
src/components/shared/: AddZoneButton.tsx  BoltSnapIndicator.tsx  HoverTooltip.tsx  IncludeInReportsRow.tsx  ZoneInspector.tsx  ZoneNode.tsx  (+3 more)
src/electrical/: types.ts
src/engine/: adapter.ts  effective.ts  solver.ts  types.ts
src/hooks/: useDirtyTracker.ts
src/io/: bom.ts  bomExport.ts  csvExport.ts  drawingsPdf.ts  drawingsRender.tsx  geometry.ts  importGraph.ts  pdfExport.ts  pdfFonts.ts  projectFile.ts  reporting.ts  saveLoad.ts  svgRender.tsx  tagPlacement.ts  useProjectIO.ts
src/lib/: ids.ts
src/pages/: Analysis.tsx  Drawings.tsx
src/presets/: filters.ts  fluids.ts  pipes.ts  pumps.ts  valves.ts
src/store/: diagramStore.ts  drawingsStore.ts  projectStore.ts  uiStore.ts
src/symbols/: registry.tsx  svgUtil.tsx  types.ts
src/types/: diagram.ts
(+59 files in other folders)
