[package]
name = "pandid"
version = "2.0.0"
description = "Ash's MEP Playground — local P&ID and electrical design, drafting and analysis tool"
authors = ["you"]
edition = "2021"

[lib]
name = "pandid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Registry access for the Windows-only first-run file-association hook.
# Bundled only on Windows targets so cargo check on macOS / Linux still passes.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
